--- a/moneyclub/templates/moneyclub/grouppage.html
+++ b/moneyclub/templates/moneyclub/grouppage.html
@@ -144,7 +144,7 @@
                     </div>
                   </a>
                 <div class="media-body">
-                  <h4 class="media-heading"><a href="#">Decision on splitting RBS overshadows trading update</a></h4>
+                  <h4 class="media-heading"><a href="article.html">Decision on splitting RBS overshadows trading update</a></h4>
                   <span class="label label-info">Article</span>
                   THE Treasury’s imminent decision on splitting Royal Bank of Scotland into a “good bank” and “bad bank” is set to overshadow Friday’s third-quarter trading update...
                 </div>
