--- a/moneyclub/templates/moneyclub/grouppage.html
+++ b/moneyclub/templates/moneyclub/grouppage.html
@@ -35,13 +35,13 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
           <ul  class="nav navbar-nav navbar-right">
             <form class="navbar-form navbar-left" role="search"
-                  action="/search-grumbl" method="post">
+                  action="#" method="post">
                 <div class="form-group">
                   <input type="text" class="form-control" placeholder="Search Moneyclub" name="query">
                 </div>
@@ -52,8 +52,8 @@
             </form>
 
             
-            <li ><a href="/reset-password"><span class="glyphicon glyphicon-cog"></span></a></li>
-            <li ><a href="/logout"><span class="glyphicon glyphicon-log-out"></span></a></li> <!-- link to signin-->
+            <li ><a href="#"><span class="glyphicon glyphicon-cog"></span></a></li>
+            <li ><a href="welcome.html"><span class="glyphicon glyphicon-log-out"></span></a></li> <!-- link to signin-->
 
         </ul>
         </div><!-- /.nav-collapse -->
