--- a/moneyclub/templates/moneyclub/newsfeed.html
+++ b/moneyclub/templates/moneyclub/newsfeed.html
@@ -1,117 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="../../assets/ico/favicon.png">
+{% extends "moneyclub/index.html" %}
 
-    <title>McDuck's newsfeeds</title>
+    {% block title %}
+    <title>{{user}}'s Newsfeed</title>
+    {% endblock title %}
 
-    <!-- Bootstrap core CSS -->
-    <link href="../../static/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="../../static/css/offcanvas.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="../../assets/js/html5shiv.js"></script>
-      <script src="../../assets/js/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-    <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Moneyclub</a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-          <ul  class="nav navbar-nav navbar-right">
-            <form class="navbar-form navbar-left" role="search"
-                  action="#" method="post">
-                <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Search Moneyclub" name="query">
-                </div>
-                <button type="submit" class="btn btn-default">
-                  <span class="glyphicon glyphicon-search"></span>
-                </button>
-             
-            </form>
-
-            
-            <li ><a href="#"><span class="glyphicon glyphicon-cog"></span></a></li>
-            <li ><a href="welcome.html"><span class="glyphicon glyphicon-log-out"></span></a></li> <!-- link to signin-->
-
-        </ul>
-        </div><!-- /.nav-collapse -->
-      </div><!-- /.container -->
-    </div><!-- /.navbar -->
-
-    <div class="container">
-
-      <div class="row row-offcanvas row-offcanvas-right">
-        <div class="col-xs-12 col-sm-9">
-         
-          <div class="jumbotron">
-            <div class="row">
-
-
-              <div class="col-lg-5">
-                  <div class="media">
-                      <a class="pull-left" href="#">
-                          <img class="media-object dp img-circle" src="../../static/image/289919_1252843359020_250_330.jpg" style="width: 100px;height:100px;">
-                      </a>
-                      <div class="media-body">
-                          <h4 class="media-heading">Scrooge McDuck <small> USA/Scotland</small></h4>
-                          <h5>adventurer, explorer and philanthropist at <a href="http://disney.wikia.com/wiki/Scrooge_McDuck">McDuck & Company</a></h5>
-                          <hr style="margin:8px auto">
-
-                                  <p>
-                                      <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-comment"></span> Message</a>
-                                      <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-heart"></span> Favorite</a>
-                                      <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-ban-circle"></span> Unfollow</a>
-                                  </p>
-                          <span class="label label-default">Finance</span>
-                          <span class="label label-info">Global Trading</span>
-                          <span class="label label-default">Shoe Polishing</span>
-                      </div>
-                  </div>
-
-              </div><!-- col-lg-5 -->
-
-            </div>
-
-          </div> <!-- jumbotron -->
-
-          <div class="container">  
-            <div class="row">  
-            <div class="span6">  
-            <ul class="nav nav-tabs">  
-            <li class="active">  
-            <a href="#">Article</a> </li>   
-            <li><a href="#">Link</a></li>  
-            <li><a href="#">Image </a></li>   
-            <li><a href="#">Start Activity</a></li>   
-            
-            </ul>  
-            </div>  
-            </div>  
-            </div>  
-
-          
+    
+          {% block articles %}
             <div class="row">
               
                     <div class="panel panel-default">
@@ -259,102 +153,5 @@
             
             
           </div><!--/row-->
-        </div><!--/span-->
-
-        <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="siderbars" role="navigation">
-          <div class="well sidebar-nav">
-            <ul class="nav">
-             
-              <table class="table table-striped table-condensed">
-                  <thead>
-                          <tr>
-                            <th></th>
-                            <th>PRICE</th>
-                            <th>CHG</th>
-                            <th>%CHG</th>
-                          </tr>
-                  </thead>   
-                  <tbody>
-                          <tr>
-                            <td><a href="#">Dow</a></td>
-                            <td>15,580</td>
-                            <td style="color:red">-40</td>
-                            <th style="color:red">0.27%</th>
-                          </tr>
-                  </tbody>
-                  <tbody>
-                          <tr>
-                            <td><a href="#">S&P</a></td>
-                            <td>1,760</td>
-                            <td style="color:red">-3</td>
-                            <th style="color:red">0.19%</th>
-                          </tr>
-                  </tbody>
-                  <tbody>
-                          <tr>
-                            <td><a href="#">Gold</a></td>
-                            <td>1,325</td>
-                            <td style="color:red">-24</td>
-                            <th style="color:red">1.80%</th>
-                          </tr>
-                  </tbody>
-                   <tbody>
-                          <tr>
-                            <td><a href="#">MCD</a></td>
-                            <td>525</td>
-                            <td style="color:green">17</td>
-                            <th style="color:green">0.31%</th>
-                          </tr>
-                  </tbody>
-              </table>
-              
-            </ul>
-          </div><!--/.well -->
-          <div class="well sidebar-nav">
-            <ul class="nav">
-              <li>Groups</li>
-              <li class="active"><a href="#">Scrooge Mcduck Universe</a></li>
-              <li><a href="grouppage.html">American-Scottish Trading</a></li>
-              <li><a href="#">Billionare Philanthropists</a></li>
-              
-            </ul>
-          </div><!--/.well -->
-          <div class="well sidebar-nav">
-            <ul class="nav">
-              <li>Events</li>
-              <li class="active"><a href="#"><span class="glyphicon glyphicon-calendar"></span>Tea Party with Duck Billionare Club</a></li>
-              <li><a href="#"><span class="glyphicon glyphicon-calendar"></span>Polishing Gold Coins</a></li>
-              <li><a href="#"><span class="glyphicon glyphicon-calendar"></span>Visiting the President</a></li>
-              
-            </ul>
-          </div><!--/.well -->
-          <div class="well sidebar-nav">
-            <ul class="nav">
-              <li>Apps</li>
-              <li class="active"><a href="#">Sharing</a></li>
-              <li><a href="#">Messages</a></li>
-              <li><a href="#">Inviting friends</a></li>
-              
-            </ul>
-          </div><!--/.well -->
-        </div><!--/span-->
-      </div><!--/row-->
-
-      <hr>
-
-      <footer>
-        <p>&copy; Company 2013</p>
-      </footer>
-
-    </div><!--/.container-->
-
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="../../assets/js/jquery.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <script src="offcanvas.js"></script>
-  </body>
-</html>
+          {% endblock articles %}
+        
