--- a/moneyclub/templates/moneyclub/welcome.html
+++ b/moneyclub/templates/moneyclub/welcome.html
@@ -1,74 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="../../assets/ico/favicon.png">
-
-    <title>Welcome to MoneyClub</title>
-
+{% extends "non_login_template.html" %}
+    {% block headblock %}
+      {% block title %}
+        <title>Welcome to MoneyClub</title>
+      {% endblock title %}
     <!-- Bootstrap core CSS -->
     <link href="../../static/dist/css/bootstrap.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="../../assets/js/html5shiv.js"></script>
-      <script src="../../assets/js/respond.min.js"></script>
-    <![endif]-->
-
-    <!-- Custom styles for this template -->
-    
     <link href="../../static/css/carousel.css" rel="stylesheet">
     <script src="../../static/js/jquery-1.10.2.min.js"></script>
-    
-  </head>
-<!-- NAVBAR
-================================================== -->
-  <body>
-    <div class="navbar-wrapper">
-      <div class="container">
+    {% endblock headblock %}
 
-        <div class="navbar navbar-inverse navbar-static-top">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#">Moneyclub</a>
-            </div>
-            <div class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                
-              </ul>
-              <div class="navbar-collapse collapse">
-                <form class="navbar-form navbar-right" action="index.html">
-                  <div class="form-group">
-                    <input type="text" placeholder="Email" class="form-control">
-                  </div>
-                  <div class="form-group">
-                    <input type="password" placeholder="Password" class="form-control">
-                  </div>
-                  <button type="submit" class="btn btn-success">Sign in</button>
-                </form>
-              </div><!--/.navbar-collapse -->
-
-               
-            </ul>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-
-
+    {% block contentsblock %}
     <!-- Carousel
     ================================================== -->
     <div id="myCarousel" class="carousel slide">
@@ -153,19 +95,22 @@
 
 
       <!-- FOOTER -->
+      
+
+    </div><!-- /.container -->
+    {% endblock contentsblock %}
+
+    {% block footerblock %}
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>&copy; 2013 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
-
-    </div><!-- /.container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    {% endblock footerblock %}
+    
+   
+    {% block endscript %}
     <script src="../../static/assets/js/jquery.js"></script>
     <script src="../../static/dist/js/bootstrap.min.js"></script>
     <script src="../../static/assets/js/holder.js"></script>
-  </body>
-</html>
+    {% endblock endscript %}
+
