--- a/moneyclub/templates/moneyclub/non_login_template.html
+++ b/moneyclub/templates/moneyclub/non_login_template.html
@@ -1,14 +1,14 @@
-{% extends "moneyclub/root_template.html %}
+{% extends "moneyclub/root_template.html" %}
 
   {% block headblock %}
     {% block title %}
     <title>Signin Template for Bootstrap</title>
     {% endblock title %}
     <!-- Bootstrap core CSS -->
-    <link href="../../static/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="/static/dist/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../../static/css/signin.css" rel="stylesheet">
+    <link href="/static/css/signin.css" rel="stylesheet">
   {% endblock headblock %}
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -50,47 +50,45 @@
                   </ul>
                 </li>
               </ul>
+              {% block signin %}
               <div class="navbar-collapse collapse">
-                <form class="navbar-form navbar-right" action="signin.html">
+                <form class="navbar-form navbar-right" method="post" action="{% url 'django.contrib.auth.views.login' %}">
                   <div class="form-group">
-                    <input type="text" placeholder="Email" class="form-control">
+                    <input type="text" id="id_username" placeholder="Username" class="form-control">
                   </div>
                   <div class="form-group">
-                    <input type="password" placeholder="Password" class="form-control">
+                    <input type="password" id="id_password" placeholder="Password" class="form-control">
                   </div>
                   <button type="submit" class="btn btn-success">Sign in</button>
-                </form>
-              </div><!--/.navbar-collapse -->
+                  {% csrf_token %}
+                  {% if form.errors %}
+                  <p style="color:red"> Incorrect user name or password.  </p>  
 
+                  {% endif %} 
+                </form>
+                
+              </div><!--/.navbar-collapse -->
+              {% endblock signin %}
                
             
             </div> <!-- /navbar-collapse -->
+
           </div> <!-- /"container"-->
         </div>  <!--/navbar-->
 
       </div> <!-- / container -->
     </div> <!-- /"navbar-wrapper" -->
     {% endblock nevbar %}   
-    {% block contensblock %}
-    <div class="container">
 
-      <form class="form-signin">
-        <h2 class="form-signin-heading">Please sign in</h2>
-        <input type="text" class="form-control" placeholder="Email address" autofocus>
-        <input type="password" class="form-control" placeholder="Password">
-        <label class="checkbox">
-          <input type="checkbox" value="remember-me"> Remember me
-        </label>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-      </form>
-
-    </div> <!-- /container -->
-    {% endblock contensblock %}
+    {% block contentsblock %}
+    
+    {% endblock contentsblock %}
 
     {% block footerblock %}
     {% endblock footerblock %}
 
     {% block endscript %}
     {% endblock endscript %}
+
   {% endblock bodyblock %}
 
