--- a/moneyclub/templates/moneyclub/signup.html
+++ b/moneyclub/templates/moneyclub/signup.html
@@ -1,31 +1,38 @@
 {% extends "moneyclub/non_login_template.html" %}
-  {% block headblock %}
+  {% block title %}
   
     <title>Signin Template for Bootstrap</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="../../static/dist/css/bootstrap.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="../../static/css/signin.css" rel="stylesheet">
   {% endblock title %}
   
-
-  
+    {% block signin %}
+    {% endblock signin %}
     {% block contentsblock %}
 
     <div class="container">
 
-      <form class="form-signin" >
+      <form class="form-signin" method="post" action="/register">
         <h2 class="form-signin-heading">Sign up Moneyclub</h2>
-        <input type="text" class="form-control" placeholder="Username" autofocus>
-        <input type="text" class="form-control" placeholder="Email address" >
-        <input type="password" class="form-control" placeholder="Password">
-        <input type="password" class="form-control" placeholder="Confirm Password">
+        {% for field in form.visible_fields %}
+            
+          {{field}}
+           {{field.errors}}
+             
+        {% endfor %}
         
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+         <input class="btn btn-primary btn-block"
+          type="submit" value="Register">
+          
+        {% for field in form.hidden_fields %}
+          {{field}}
+        {% endfor %}
+        
+        {% csrf_token %}
       </form>
-
+      {% for error in form.non_field_errors %}
+          <p style="color: red">
+            {{ error }}
+          </p>
+      {% endfor %}
     </div> <!-- /container -->
 
     {% endblock contentsblock %}
