--- a/moneyclub/templates/moneyclub/login_template.html
+++ b/moneyclub/templates/moneyclub/login_template.html
@@ -29,7 +29,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="/profile">Profile</a></li>
           </ul>
           <ul  class="nav navbar-nav navbar-right">
             <form class="navbar-form navbar-left" role="search"
@@ -45,7 +45,7 @@
 
             
             <li ><a href="#"><span class="glyphicon glyphicon-cog"></span></a></li>
-            <li ><a href="welcome.html"><span class="glyphicon glyphicon-log-out"></span></a></li> <!-- link to signin-->
+            <li ><a href="/logout"><span class="glyphicon glyphicon-log-out"></span></a></li> <!-- link to signin-->
 
         </ul>
         </div><!-- /.nav-collapse -->
@@ -68,9 +68,9 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     {% block endscript %}
-    <script src="../../assets/js/jquery.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <script src="offcanvas.js"></script>
+    <script src="/static/assets/js/jquery.js"></script>
+    <script src="/static/dist/js/bootstrap.min.js"></script>
+    <script src="/static/js/offcanvas.js"></script>
     {% endblock endscript %}
   {% endblock bodyblock %}
   </body>
