--- a/moneyclub/templates/moneyclub/index.html
+++ b/moneyclub/templates/moneyclub/index.html
@@ -22,10 +22,10 @@
          
          {% block jumbotron%}
           <div class="jumbotron">
-            2<div class="row">
+            <div class="row">
 
 
-              <div class="col-lg-5">
+              <div class="col-lg-9">
                   <div class="media">
                       <a class="pull-left" href="#">
                           <img class="media-object dp img-circle" src="../../static/image/289919_1252843359020_250_330.jpg" style="width: 100px;height:100px;">
