--- a/moneyclub/templates/moneyclub/Menu.html
+++ b/moneyclub/templates/moneyclub/Menu.html
@@ -79,7 +79,16 @@
     <div class="container">
 
       <form class="form-signin"><br/><br/><br/><br/><br/><br/>
-        <h2 class="form-signin-heading"><div class="btn btn-block btn-lg btn-success"><span class="glyphicon glyphicon-ok"></span> User Invited Successfully!</div></h2>
+       
+        
+        
+      
+       
+       <a href="/moneyclub/groups/home" class="btn btn-block btn-lg btn-info"><span class="glyphicon glyphicon-home"></span> Home</a>
+       <a href="/moneyclub/groups/club_create" class="btn btn-block btn-lg btn-primary"><span class="glyphicon glyphicon-plus"></span> Create Money Club</a>
+       <a href="/moneyclub/groups/add_members_generic" class="btn btn-block btn-lg btn-success"><span class="glyphicon glyphicon-plus-sign"></span> Add Members to Money Club</a>
+       <a href="/moneyclub/groups/view_group_members1/" class="btn btn-block btn-lg btn-warning"><span class="glyphicon glyphicon-search"></span> View Club Members</a>
+       <a href="/moneyclub/groups/view_group_members1/" class="btn btn-block btn-lg btn-danger"><span class="glyphicon glyphicon-minus-sign"></span> Block Club Members</a>
         
       </form>
 
