--- a/moneyclub/templates/moneyclub/group_home_page.html
+++ b/moneyclub/templates/moneyclub/group_home_page.html
@@ -73,13 +73,15 @@
                   <div class="media">
                     
                       <a class="pull-left" href="#">
-                          <img class="media-object dp img-circle" src="../../static/image/scottish-terrier-watercolor-irina-march.jpg" style="width: 100px;height:100px;">
+                          <img id="ameyy" class="media-object dp img-circle" src="/moneyclub/groups/get_photo/{{id}}" 
+                          style="width: 100px;height:100px;">
                       </a>
 
                     
                       <div class="media-body">
-                          <h4 class="media-heading">{{group_name}}</h4>
-                          <p><small>Founded by Mr. Andrew Carnegie and Mr. Scrooge MdDuck. Focused on uniting Scottish-American Bussinessmen. Share your knowledge, information and interest in the cross-Atalantic Market with amazing people</small></p>
+                          <h4 class="media-heading">{{group_name}} </h4>
+                          <p><small>Founded by Mr. Andrew Carnegie and Mr. Scrooge MdDuck. Focused on uniting Scottish-American Bussinessmen. 
+                          Share your knowledge, information and interest in the cross-Atalantic Market with amazing people</small></p>
                           <hr style="margin:8px auto">
 
                                  
