--- a/moneyclub/templates/moneyclub/non_login_template.html
+++ b/moneyclub/templates/moneyclub/non_login_template.html
@@ -12,8 +12,8 @@
   {% endblock headblock %}
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="../../assets/js/html5shiv.js"></script>
-      <script src="../../assets/js/respond.min.js"></script>
+      <script src="/static/assets/js/html5shiv.js"></script>
+      <script src="/static/assets/js/respond.min.js"></script>
     <![endif]-->
     
 
@@ -54,16 +54,16 @@
               <div class="navbar-collapse collapse">
                 <form class="navbar-form navbar-right" method="post" action="{% url 'django.contrib.auth.views.login' %}">
                   <div class="form-group">
-                    <input type="text" name="username" id="id_username" placeholder="Username" class="form-control">
+                    <input type="text" id="id_username" placeholder="Username" class="form-control">
                   </div>
                   <div class="form-group">
-                    <input type="password" name="password" id="id_password" placeholder="Password" class="form-control">
+                    <input type="password" id="id_password" placeholder="Password" class="form-control">
                   </div>
                   <button type="submit" class="btn btn-success">Sign in</button>
                   {% csrf_token %}
                   {% if form.errors %}
-                  <p> Incorrect user name or password.  </p>  
-                  
+                  <p style="color:red"> Incorrect user name or password.  </p>  
+
                   {% endif %} 
                 </form>
                 
