--- a/moneyclub/templates/moneyclub/grouppage.html
+++ b/moneyclub/templates/moneyclub/grouppage.html
@@ -9,7 +9,7 @@
             <div class="row">
 
 
-              <div class="col-lg-5">
+              <div class="col-lg-12">
                   <div class="media">
                     
                       <a class="pull-left" href="#">
@@ -68,7 +68,7 @@
                 
             </div> <!-- /row -->
           </div>  <!-- /container -->
-      {% block post%}
+      {% endblock post%}
           
 
       {% block articles %}
@@ -270,4 +270,4 @@
           </div><!--/.well -->
         </div><!--/span-->
         {% endblock sidebars %}
-      
+       {% endblock contentsblock %}
