--- a/moneyclub/templates/moneyclub/signup.html
+++ b/moneyclub/templates/moneyclub/signup.html
@@ -1,7 +1,7 @@
 {% extends "moneyclub/non_login_template.html" %}
   {% block title %}
   
-    <title>Signin Template for Bootstrap</title>
+    <title>Sign Up For MoneyClub</title>
   {% endblock title %}
   
     {% block signin %}
