--- a/moneyclub/templates/moneyclub/login_template.html
+++ b/moneyclub/templates/moneyclub/login_template.html
@@ -11,10 +11,12 @@
 
     <!-- Custom styles for this template -->
     <link href="/static/css/offcanvas.css" rel="stylesheet">
+    <script src="/static/js/jquery-1.10.2.min.js"></script>
+  
   {% endblock headblock %}
    
-  {% block bodyblock %} 
-    {% block nevbar %}
+  {% block bodyblock %}
+  {% block nevbar %}
     <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -27,25 +29,38 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="/home">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="/moneyclub/member/profile">Profile</a></li>
           </ul>
           <ul  class="nav navbar-nav navbar-right">
             <form class="navbar-form navbar-left" role="search"
-                  action="#" method="post">
+                  action="/moneyclub/member/search" method="post">
                 <div class="form-group">
                   <input type="text" class="form-control" placeholder="Search Moneyclub" name="query">
                 </div>
                 <button type="submit" class="btn btn-default">
                   <span class="glyphicon glyphicon-search"></span>
                 </button>
-             
+                {% csrf_token %}
             </form>
 
             
-            <li ><a href="#"><span class="glyphicon glyphicon-cog"></span></a></li>
-            <li ><a href="welcome.html"><span class="glyphicon glyphicon-log-out"></span></a></li> <!-- link to signin-->
+            
+              <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-cog"></span> <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="/moneyclub/member/reset-password">Reset Password</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="divider"></li>
+                <li class="dropdown-header">Nav header</li>
+                <li><a href="#">Separated link</a></li>
+                <li><a href="#">One more separated link</a></li>
+              </ul>
+            </li>
+           
+            <li ><a href="/logout"><span class="glyphicon glyphicon-log-out"></span></a></li> <!-- link to signin-->
 
         </ul>
         </div><!-- /.nav-collapse -->
@@ -60,18 +75,20 @@
     
      
     {% endblock contentsblock %}
+    {%block footer%}
      <footer>
         <p>&copy; Company 2013</p>
       </footer>
-
+    {%endblock footer%}
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     {% block endscript %}
     <script src="/static/assets/js/jquery.js"></script>
     <script src="/static/dist/js/bootstrap.min.js"></script>
-    <script src="offcanvas.js"></script>
+    
+    <script src="/static/js/offcanvas.js"></script>
+
     {% endblock endscript %}
   {% endblock bodyblock %}
-  </body>
-</html>
+
