--- a/moneyclub/templates/moneyclub/non_login_template.html
+++ b/moneyclub/templates/moneyclub/non_login_template.html
@@ -10,11 +10,7 @@
     <!-- Custom styles for this template -->
     <link href="/static/css/signin.css" rel="stylesheet">
   {% endblock headblock %}
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="/static/assets/js/html5shiv.js"></script>
-      <script src="/static/assets/js/respond.min.js"></script>
-    <![endif]-->
+
     
 
   {% block bodyblock %} 
@@ -34,36 +30,23 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li class="divider"></li>
-                    <li class="dropdown-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
-                  </ul>
-                </li>
+                <li class="active"><a href="/home">Home</a></li>
+                
               </ul>
               {% block signin %}
               <div class="navbar-collapse collapse">
                 <form class="navbar-form navbar-right" method="post" action="{% url 'django.contrib.auth.views.login' %}">
                   <div class="form-group">
-                    <input type="text" id="id_username" placeholder="Username" class="form-control">
+                    <input type="text" name="username" id="id_username" placeholder="Username" class="form-control">
                   </div>
                   <div class="form-group">
-                    <input type="password" id="id_password" placeholder="Password" class="form-control">
+                    <input type="password" name="password" id="id_password" placeholder="Password" class="form-control">
                   </div>
                   <button type="submit" class="btn btn-success">Sign in</button>
                   {% csrf_token %}
                   {% if form.errors %}
-                  <p style="color:red"> Incorrect user name or password.  </p>  
-
+                  <p> Incorrect user name or password.  </p>  
+                  
                   {% endif %} 
                 </form>
                 
