--- a/moneyclub/templates/moneyclub/profile.html
+++ b/moneyclub/templates/moneyclub/profile.html
@@ -16,7 +16,7 @@
     {% block contentsblock %}
     <div class="container">
     	<div class="row row-offcanvas row-offcanvas-right">
-    		<div class="col-md-9 col-md-offset-1 ">
+    		<div class="col-md-12  ">
          {% block jumbotron%}
           <div class="jumbotron">
             <div class="row">
@@ -25,10 +25,10 @@
               <div class="col-lg-9">
                   <div class="media">
                       <a class="pull-left" href="#">
-                          <img class="media-object dp img-circle" src="photo/{{user.id}}" style="width: 100px;height:100px;">
+                          <img class="media-object dp img-circle" src="{% url 'user-photo' user.id%}" style="width: 100px;height:100px;">
                       </a>
                       <div class="media-body">
-                          <h4 class="media-heading">Scrooge McDuck <small> USA/Scotland</small></h4>
+                          <h4 class="media-heading">{{user}} <small> USA/Scotland</small></h4>
                           <h5>adventurer, explorer and philanthropist at <a href="http://disney.wikia.com/wiki/Scrooge_McDuck">McDuck & Company</a></h5>
                           <hr style="margin:8px auto">
 
@@ -54,7 +54,7 @@
       <div class="row marketing ">
         <div class="col-lg-12">
         	<form enctype="multipart/form-data"
-	 		method="post" action="/save-profile" id="save_profile">
+	 		method="post" action="/member/save-profile" id="save_profile">
 	        	{% for field in profile.visible_fields %}
 				<div class="block">
 					{% if field.name != "profilepicture" %}
