--- a/moneyclub/templates/moneyclub/view_group_members1.html
+++ b/moneyclub/templates/moneyclub/view_group_members1.html
@@ -81,9 +81,9 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     {% block endscript %}
-    <script src="../../assets/js/jquery.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <script src="offcanvas.js"></script>
+    <script src="/static/assets/js/jquery.js"></script>
+    <script src="/static/dist/js/bootstrap.min.js"></script>
+    <script src="/static/css/offcanvas.js"></script>
     {% endblock endscript %}
   {% endblock bodyblock %}
   </body>
