--- a/moneyclub/static/css/offcanvas.css
+++ b/moneyclub/static/css/offcanvas.css
@@ -46,3 +46,25 @@ footer {
     width: 50%; /* 6 columns */
   }
 }
+
+.modal-header {
+  min-height: 16.428571429px;
+  padding: 15px;
+  border-bottom: 1px ;
+}
+.modal-footer {
+  padding: 19px 20px 20px;
+  margin-top: 15px;
+  text-align: right;
+  border-top: 1px ;
+}
+.input-group { margin-bottom:10px; }
+.modal .input-group { margin-bottom:10px; }
+/*
+.modal .form-control {
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+*/
