--- a/moneyclub/templates/moneyclub/index.html
+++ b/moneyclub/templates/moneyclub/index.html
@@ -32,26 +32,26 @@
                       <a class="pull-left" href="#">
                           <img class="media-object dp img-circle" src="{% url 'user-photo' user.id%}" style="width: 100px;height:100px;">
                       </a>
-                      <div class="media-body">
-                          <h4 class="media-heading">{{user}} <small> USA/Scotland</small></h4>
-                          <h5>adventurer, explorer and philanthropist at <a href="http://disney.wikia.com/wiki/Scrooge_McDuck">McDuck & Company</a></h5>
-                          <hr style="margin:8px auto">
+                    <div class="media-body">
+                        <h4 class="media-heading">{{user}} <small> USA/Scotland</small></h4>
+                        <h5>adventurer, explorer and philanthropist at <a href="http://disney.wikia.com/wiki/Scrooge_McDuck">McDuck & Company</a></h5>
+                        <hr style="margin:8px auto">
 
-                                  <p>
-                                      <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-comment"></span> Message</a>
-                                      <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-heart"></span> Favorite</a>
-                                      <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-ban-circle"></span> Unfollow</a>
-                                  </p>
-                          <span class="label label-default">Finance</span>
-                          <span class="label label-info">Global Trading</span>
-                          <span class="label label-default">Shoe Polishing</span>
-                          <a class="btn btn-success" href="/moneyclub/groups/club_create">Create a Group</a>
-                      </div>
+                                <p>
+                                    <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-comment"></span> Message</a>
+                                    <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-heart"></span> Favorite</a>
+                                    <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-ban-circle"></span> Unfollow</a>
+                                </p>
+                        <span class="label label-default">Finance</span>
+                        <span class="label label-info">Global Trading</span>
+                        <span class="label label-default">Shoe Polishing</span>
+                        <a class="btn btn-success" href="/moneyclub/groups/club_create">Create a Group</a>
+                    </div>
                   </div>
 
               </div><!-- col-lg-5 -->
 
-            </div>
+            </div> <!--/.row -->
 
           </div> <!-- jumbotron -->
           {% endblock jumbotron%}
@@ -62,6 +62,7 @@
 
   
           {% block articles %}
+          <div class="container">
           <div class="row">
             
               <div class="media">
@@ -99,6 +100,7 @@
             
             
           </div><!--/row-->
+           </div><!--/.container-->
           {% endblock articles %}
         </div><!--/span-->
         
@@ -158,7 +160,7 @@
             <ul class="nav">
               <li>Groups</li>
               <li class="active"><a href="#">Scrooge Mcduck Universe</a></li>
-              <li><a href="/">American-Scottish Trading</a></li>
+              <li><a href="/moneyclub/groups/home">American-Scottish Trading</a></li>
               <li><a href="#">Billionare Philanthropists</a></li>
               
             </ul>
@@ -181,8 +183,9 @@
               
             </ul>
           </div><!--/.well -->
-        </div><!--/span-->
         {% endblock sidebars %}
+        </div><!--/span-->
+        
       </div><!--/row-->
       
       <hr>
@@ -197,7 +200,8 @@
      
     <script src="/static/js/offcanvas.js"></script>
     <script src="/static/js/bootstrap-datetimepicker.min.js"></script>
-     <script src="/static/js/bootstrap-datetimepicker.js"></script>
+    <script src="/static/js/bootstrap-datetimepicker.js"></script>
+
 
     {% endblock endscript %}
    
